sin errores hasta swaggers

--- a/Billetera Virtual (mvcConVSCORE)/miBilletera/appsettings.json
+++ b/Billetera Virtual (mvcConVSCORE)/miBilletera/appsettings.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
- "ConnectionStrings": {
- "DefaultConnection": "User ID=DESKTOP-UU8OQRO;Database=Corrientes;"
  
-}
+ 
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+  "DefaultConnection": "Server=DESKTOP-UU8OQRO;Database=Corrientes;Integrated Security=True;"
+  }
 }
