--- a/Billetera Virtual (mvcConVSCORE)/miBilletera/miBilletera.csproj
+++ b/Billetera Virtual (mvcConVSCORE)/miBilletera/miBilletera.csproj
@@ -7,12 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.11" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
-     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" /> 
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
+     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.11">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    </PackageReference> 
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" /> 
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 </Project>
